# xiaozhi-ai-phicomm-r1-client

./: README.md  braces_output.txt  fix.md  metadata.json  package-lock.json  package.json  parse_braces.py  plan.md  plan_fix.md  server.ts  setup_android_env.sh  techstack.md  test_debug.kt  update1.md  update2.md  vite.config.ts  xiaozhi-r1-client-v1.4.1.apk  xiaozhi-r1-client-v1.4.1.apk.idsig  xiaozhi-r1-client-v1.4.2.apk  xiaozhi-r1-client-v1.4.2.apk.idsig
android-project/: build_output.txt  settings.gradle.kts
android-project/app/: build.gradle.kts  proguard-rules.pro
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/web/: index.html
android-project/app/src/main/assets/web/assets/: index-3-B9azsK.js  index-B6FMdOai.css  index-BOimCLTf.js  index-BhOWtEnf.js  index-CCQ0pTD8.css  index-Cx9gaF1J.css  index-DIuIocX5.css  index-DhYlXpJ_.css  index-Dqz-6R6u.js  index-Dzs74-3N.js  index-MPqYL9Xm.js  motion-vendor-CP292v1d.js  react-vendor-CPCCwHGh.js  ui-vendor-CC0_lbH_.js  ui-vendor-CG66UVev.js
android-project/app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
android-project/app/src/main/java/com/xiaozhi/r1/: BootReceiver.kt  ButtonListener.kt  MainActivity.kt  MainService.kt
android-project/app/src/main/java/com/xiaozhi/r1/audio/: AudioRecorder.kt  OpusDecoder.kt  OpusEncoder.kt  (+3 more)
src/: App.tsx  index.css
src/hooks/: useAlarms.ts  useBluetooth.ts  useCasting.ts  useChat.ts  useConfig.ts  useEqualizer.ts  useLed.ts  useMedia.ts  useOta.ts  useSmartHome.ts  useSystemStatus.ts  useWifi.ts
src/lib/: api.test.ts  api.ts
(+24 files in other folders)
